--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "diagnose.doc.tar.xz": 137359905119ad50a7a10c72868dd8acce9e8748
-  "diagnose.tar.xz": fee6143edc1ce7472fa6afbc6ae52330a6ab808e
+  diagnose.doc.r19387.tar.xz: ac9d341a57e2383c1ad1c9e5adf602644bf8ed4d
+  diagnose.r19387.tar.xz: a3dcaadcedb2071aaa7a8de2c1b255b52253ca62
